Update vsync override in PostSubBuffers.

This was only happening in SwapBuffers, so the vsync override could
become stale if only PostSubBuffers were happening.

BUG=632785

Review-Url: https://codereview.chromium.org/2188063002
Cr-Commit-Position: refs/heads/master@{#409376}

Former-commit-id: cb571e2230c90eec7d7c498f6dfd293eaa350001